--- a/ansible/inventory/kube/host_vars/k3s-0.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-0.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:SmFoZUIW,iv:nu7VNAmiLiTBBUB7ZsbckGCASlWCj2+0YWiqLRF2oFE=,tag:sPEfkYGnGgxbxtFf7V5F1g==,type:str]
-ansible_user: ENC[AES256_GCM,data:CxGDcAWt,iv:xl9FETmfnJP1X5YdBKfzzKr8IZnL6tAp6fpT8Ayxu2g=,tag:KhQ3IgZNkrSqs9A/JzgKqA==,type:str]
+kind: ENC[AES256_GCM,data:tQLIpOsu,iv:cEu7a0wQ11dQzOWXcqmB4PYf7RgWvpLOSuFIcjCDLio=,tag:ikKkIa4f4L/z9scN74r4pw==,type:str]
+ansible_user: ENC[AES256_GCM,data:Ui6B7Ter,iv:CjbGmmUoL+S9PRdSAmPNRyXWPGC/mt3moTMshwZDK4k=,tag:u7IHZsrfG6nQd75dD3GEhw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1c0lOeU4yUzEvMGhmbEE5
-            TTNWb09uNU53MlBUNDAxenRlZ3JZZWFJR3dZClgyQm92OHd3Ny9nTFIrMnpYK1Fk
-            TU9DcXRsMlp2N1pYLzNyQmFhdVhjdG8KLS0tIGd3eGpMWForeHBlSGVKaEw0SUNC
-            RU1WZmZtaDhRQnZodThLSWdheVB1clkKYqpTBaWBAjE9ZB4c1mHsrua2RSEO5fNZ
-            1Z5XNoBjyGQ+P17lV0UQNrHrmYLhqomj9SA1KoWPqYr8K+CTKb2Peg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGQi9hVVJ6SjFVODR4VGZi
+            enNwYUdzMjZ3YzQyaTR1d1JqLytMc29EWmhZCmxMNjROREhaaHRQVk5rOUo5WlNz
+            QmdzeFkxMjBaVWJhR2NmME9VMW9YNzQKLS0tIDNTb0V5Nmx0clg1MlN1MXJhc09M
+            aWJyeGZteUk5YVdkY1ZpUFExNmtjM28KG5Mgz4obikDVZez1HYY+gsfIWb35ucE2
+            yxgL4kBoaQo2chHL+7FEGTdKU4jt6K8luGui201P/NfmiraQGwsaVA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-08T23:13:11Z"
-    mac: ENC[AES256_GCM,data:e5S3KD4qI271pFC9EQcE4BvdVdKwWrMJyi8YVJJSh2k/X2leHl8im7Nrz9BkZ/JumL+/HY4IYQGWmu0psAOOVnMivsV5Ozcp0fCfTHECI7dtpWvTj9HxO6y7+Y/ey6cySPh4Ie86H4pO4DOEy1TnSW9atp/4rImLbR9D8JtpSCE=,iv:bKpTlRzjUyMdojI4R/im5rRYh7H2V5YX+ZDyEzrWVsA=,tag:k0c3W1ukJYS1XE0SyLzi0w==,type:str]
+    lastmodified: "2023-01-08T23:33:22Z"
+    mac: ENC[AES256_GCM,data:A/GaKcygVdJq9CWFmCe919CYrLQGEvU0HbN0o6kJFUcc+LQyHfc7+ETQBohLxoNAuio74v4jhniZU/K+PoMiv5AUTOeVrHJAEg2UDeIkjIamBHVcxQAZ8zZO0xC+9zfaMx6rkawa/Ed6OUnZUQ1xqQCrPO4RX2Z8lJG9y4IKhQ0=,iv:SDny+X0S93f4rmHJNBwSj9rMQ487USgKyx/A4tc29pM=,tag:yklSH9snK2eTLfYmjGNWYQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
