--- a/ansible/inventory/kube/host_vars/k3s-1.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-1.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:EoQh/dtF,iv:pbbKlo1oeid4YJuENWE890HoJkMB6CcE3i0o+XuWC98=,tag:AYewl5S9HlfaIvbXJ5pzNQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:VbTo4Jfx,iv:uBlVvqKob625ZEAEbKOEMd67SO/z8iTQ0NBkVv1xUmc=,tag:6eckGfDegR1HbYBx3/Sitg==,type:str]
+kind: ENC[AES256_GCM,data:MqjW//ht,iv:T4WfD+L01SYv4/IbUUORaXwesY9x21OXML9IDYRA7tk=,tag:4Q+O+LufUjd6Fb1K+Phj/A==,type:str]
+ansible_user: ENC[AES256_GCM,data:b02t+Jo6,iv:Hh185Y3zmH1Zv/c/eX7mIxO58rdd0pTLJcW63djmlIo=,tag:co81k8Ojpn7lcjI51TvUTQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlSG8rb21ic25lZEc1RHFI
-            bDhUV3V1aGJpRitZbUVTRWhkZUZCVTd6YlFBCko3WkhxVzZ3NlR1eW9DZWQzUWRm
-            M3EyMnNvR2FDbTV4L0E2SE9PNTJCU1UKLS0tIFVVazN3b2dnUVFhUzNiZk5ObEJX
-            UzZMOHJ3SjJHbDFkOEMvVnlUOWtOWEEKilpo7mIJi7usJIFVExy/CKRVa+hbr3Yz
-            iLJYbuNQNU7wvUevMrf512Dr5BThPmJbutz4dcEHQMiIfvuMBeUYDg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1S1hqNWpEWEVTaWczejBZ
+            WjBOdHp6OFZpL043NEh2TzBPMkRpVGJBOVFvCnVRaEE2UFpQMWtqYjZTbFBmSm1D
+            R2Y0NHkzR05xbWFsdFdZcDAwSFV0Y3MKLS0tIHNBenJ6R28yeHBnNVRycVJWd2ln
+            MzVZU3grRmpKMHJQM0t3VXRUdGE1KzAKBubAwUicn4fbRITTz+2qy9DiF1fRDotD
+            XyEMOlTGbx3Lf2Sm7Y0Kyo2hsXbserUJP0iShI+4DrLHHvcmkg4Aig==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-08T23:13:11Z"
-    mac: ENC[AES256_GCM,data:JWvSK6MzSdRAiXlrtRgpHPLrsfn8fUEb8Rz0wilet02h8qGqgPoqmij5rMbDkYbXIua1Je5p5/oNUBzQDS0FjpW1Nr+vBkvtn/9ylPKCTWRqqchBM1rvWI8Z/yH6LfvTWXbAOprccRmXrPZP28C7pZqgAlwIYzpRMNXqfNpOjE0=,iv:Rp6aCHtMja/fTYO5e6HZtf/hWh1QXCkXchHbtuJowss=,tag:FbKDCpv2g/g8sfkQpk+kcg==,type:str]
+    lastmodified: "2023-01-08T23:33:22Z"
+    mac: ENC[AES256_GCM,data:TwQ6SATzpPaCcxHNbdZlzIM9Vco5ZOsKH49HX/TDO8nDKR4iwffWczfwy7cLTHSxcndtyZQINk8z+c/eTvTFzB8EF0MNiCDqb49B7PlYX5AwygYQRKZwGyarvkAwC2Cj6ZE3RhH3bZh4r/fd9AbMcza2ZWbYm24lTvXeDsbVOOE=,iv:4jVg9CrxZ08KG4tI91ut3tRQvy8L04zYIeTDz3KdZiI=,tag:vdM+AYf8c8ReTSZ0X7O32g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
