--- a/ansible/inventory/kube/host_vars/k3s-2.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-2.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:ELLpZD/2,iv:HsnPXYjDDdGjaoay4CePXD6tZ7JLOq2E4pSTgmWAkZY=,tag:oc9q1dH2i+dGd28aH92Zog==,type:str]
-ansible_user: ENC[AES256_GCM,data:Rao9sxTj,iv:uStqXd4catX3XbfBU4Y5BcofQUQyaXZKEHqPDA9nvsM=,tag:flFkmYbKPAYphZnN2FzTQA==,type:str]
+kind: ENC[AES256_GCM,data:EusZFZFp,iv:rJ3jpy0iXj4DmFll9MMjetCdkjNrPnr+rAH1x1mjQts=,tag:Uf03BRH9YDF8HZQLAmtovg==,type:str]
+ansible_user: ENC[AES256_GCM,data:hxa9O+94,iv:R2G1iTBJ4mv1S6zGlz6hFv0AYKI00JDAFM47B9jvy0Y=,tag:ekoR4ZuUqRx0EW75TXfrlw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXZTJjL2tkQVpWcXNPVW9I
-            dTRwNnhnYjZHOGtFRndhcS9iTG5LOGlHSlJZCnJpeTBLbWg1M21xRmhzSXhoKy9W
-            eTRCQng5alR1R3hoRTlyUGxBZXhVWDgKLS0tIFdXSklsb2xueE82TFhOTzRjdnVv
-            WmhhVWVvQkxSbkdrWW40MmxIOXBYa1EKwWCNTUV1Stu2ksvIOxLhkPbB3bb9hb9q
-            4lu7wHXYtWw2CnuMo25Nj0qx8+mqwlaDYpz1jDH2ae53N+chUUhZeA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwMXh1dTYramVqTTdJdWVx
+            MDA0RFRETC9DYzhkR0J1SFZrYnd3SWNjblNjCmxVbzErbGVnSktySW5hQS9FcmZM
+            dFVLSFpvQjY4MDl4Ly8xMjI1MnU0SEUKLS0tIGdnaG9GNW9jL3dSbStBOWJ2TDNV
+            S3p6RjR3KzJIY2tsTms3NFV0cER3WEkK+61x0PwvVrq14yx8wDVQYgsKhBh/ZjeS
+            EghnBqPYGcoOjHcU2N4OyXmBEE//Qq4nJrjGgGu78cKTLXBojuvqLw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-08T23:13:11Z"
-    mac: ENC[AES256_GCM,data:3E0eyU5851NTD2FFVAuNf7YHGja51Tvqat8wirZC4E1qxgx5dFhLrlgHx0mxjdtm6tydcbDIECeYdj6UFEAepuSnqPGNk1GQL2ZlqSO5Lwrmn7gjbdUa7Ed80pJcp9oZmjn692CSwFJ2+PL0dk4Rx9i7EPt4RiD3DNvLQY/Ndbs=,iv:d/68bNI9SHsjrUn/uR3VOBWGSKF43P39DaNtAXchTeM=,tag:zeDZqf0AeVEj4H+9p3z9sQ==,type:str]
+    lastmodified: "2023-01-08T23:33:22Z"
+    mac: ENC[AES256_GCM,data:fRfT8ApdKs7xcRyfM+s4vqcZHrHjA4PGNR9sSN5V/Zkb5kQAiGMYslLooeqNN0mtkdjIWJyNbMR+brpXjWzItGVq2pXFZJ44XFMPCuj5/QnhrM7CV1oh6abj23n9LD0ny2o2BQtty7QxJvPCeF/Dv7NQrdYq4rKcwyjk1Iyb47s=,iv:DvODw7uW4lWs2T1MTwmALikm9xKOvXXcZf4voxfoD+M=,tag:wq9GDUAbcORAYST/1PY9vA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
