--- a/ansible/inventory/kube/host_vars/k3s-3.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-3.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:SIl3yGTY,iv:rsrf2anwdMsIIN7Ys21mf4MFkFIZ1FaHcryt/fqXBZU=,tag:lZkmHqc6K9XpcYkPLfFGgA==,type:str]
-ansible_user: ENC[AES256_GCM,data:teAwQMNQ,iv:zvggt+plPBGcM9JjWGlrzvlsiKpos/uq9gQNFSTDeLM=,tag:VVsg21lEZPvtEfEIZ3jryA==,type:str]
+kind: ENC[AES256_GCM,data:2twG3OQt,iv:big+CqDdUv4gDZTLY3ia0SOfcY8ksLk7h+zCvBg+Ry4=,tag:0gwFBgWPvRfk3YXTUK7UuQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:HvNQHvY+,iv:aJp5ac2tNS6Qd4cy0X6s7wckYrZBqAGwJfNNOYym1GA=,tag:YSof9u6V5R9AwRnboWvuMg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLSFZ6VXN1eFFkUCtEeitt
-            RGxSWm83dTdNeW5qdTBkVmV5U2pUQzdRMjJvCjIrOEV4SU5xYmZCc1ZiMGg3aEFH
-            M2xhbmx4bTE3eit5aXJSNWdLNGlsMjgKLS0tIEUxc2hFVlF4L2oreWQwanFOY2VI
-            T29IMGdyMVJYZUFNVFpRS09UN2J1YVkKBbpxdQP0nwiTLzXj56t+mPH4FLnG0dkO
-            n5zPL+B/qaTTq5CBLUyjqQUIX2MTVI+bOqQ5iFnWSqnf41UxUhF0Eg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzZ3Yzd2pzbzdMWXQxUHNl
+            TnJzcFJhYnZ6aEhHT3NReE9QaXZrWnUxSG1nCklMZUtSZlhUOTErRVFIM1lNY3p3
+            WW4rYWpsVVBsZFlhN2hkSzdyZ25jSnMKLS0tIHFobFdWTFY1MXpuY244QUpEdjQ0
+            Wkw4WWpaZVNXNGxmVnd2YlJ2bWJXcE0KxwaNIP4LEO+06/BRaQR973e6+NS8mrQC
+            +uaALjbnVGVeqLtpQPQUEubcnIM1+bgCJtk8vuLKbpxDLMMcP3qaJw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-08T23:13:11Z"
-    mac: ENC[AES256_GCM,data:pDkWnxEtjRJoK6V88REBMZ5CE/V2MYPIYbX3LWKRMnXyf8+9Tcri/h/Va9Hya0W33Yx7WW+aBQbEm5tDQXAsD3q6JeUSbuIvFkvASNdgXl9DJVF6gzRYqujWfPH/rDXaoUMUAa7W8iVIySXgpxxFPqZfQsLnAAOJGyQ6rn0CAWs=,iv:6o7nxvDFNuvBJaqFItToM2MgHedckLd/zPf7kZ9bQlI=,tag:kmZ7ySRex2Ge5Fg/F+18kg==,type:str]
+    lastmodified: "2023-01-08T23:33:22Z"
+    mac: ENC[AES256_GCM,data:L46cYjg8FlD7DuAwVcuqlajeuj3qW/aSnLnmTtsQtZvawrkX6MGZtxjql0/8zP3nVz2hw9wfsEsUDSsIVm+xtXfJt2qcuKHqf8jLpNiZAnZc9yQAhsNf7RG4owEWGHgtbQDL3h+Ud724fXoUYxBEggdHT+6xp32EdizjDcm8v0I=,iv:xFNUUjoTgPSrKKOi7d7haG4a5dQf64mfvkAgbJ6fHo0=,tag:ZlTa2K+kntLDY/zLe8rd/w==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
