--- a/ansible/inventory/kube/host_vars/k3s-4.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-4.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:IqDPrnvr,iv:MQh/P1b9uGodUecO2/bobconGz+sFnf2vNnGQ1p6PZM=,tag:VZ8KsicpPWSq11Ydg/eWJQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:3BDJB1a0,iv:0n4s1dlEjxDGrEoJl1RQBPJSw6OS6Iynx2Ch0CIH/7k=,tag:doXJ5fK15MUaC3o3MPyIvg==,type:str]
+kind: ENC[AES256_GCM,data:H0BI4BCn,iv:QpI3FL9qFYRyxMRiZx3zKlmkkxD6Q1HkF5X7E2Jiyp0=,tag:2vGutYz34I+kpsz7Ak5cYQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:ud7Hx+/h,iv:hoxDOjXY8Z/Bc7aDleXKqsu+HRIQ1g0D8n4vNHxxwn8=,tag:H9/peEPjwT0fJSIed9uDcg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyYnZaRjdlSHovSDQybGZz
-            Y0FmVHkxb1VQRlBoU1FIRkxZWXg1cCt6YVhVCkgyTXVCcCs2WlV3aEpIdzg1RWhW
-            QkVuaHZhbU9mWkdEbDJnaTVpNUF0VTgKLS0tIDZ2NDNLOTZLTUEvdnRLZ0FlN2JY
-            ZkwvMFJkcWZFRzV1MFA1TXJZSmhEZFUKiA1ukMMrS6hvXzZulsZaQ6XudwOVCbg2
-            sDbplhfyOIjSQcoxwxWEipKeIurpVNcUSQVWAmZsdln/1i+jpR7WZQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVaU9EK2VSQ3Q3Qk40bzF0
+            T0RZSkc4WVpqS1N1NElTeWdhZDJHaWU5bnhrCk1NRll2U3k4U25OWGVtYjBkQmx0
+            UjRZZ0cxc1EzRFlNOFRsWXVXUVE1dzAKLS0tIDNjQjhIRFoxTU1BMlNxTEdieGdF
+            Q05ETVZBRlVmNndWYU5mZmhLR0dIaVkK/qKm+z3WJ0NLr1Ddk+0LfYE+TjdxGadj
+            RgwbsK/MHXzDqevr/9pw/JGFphMgQYY3ZiQ8fsSKfcUPsJb7yquh8g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-08T23:13:11Z"
-    mac: ENC[AES256_GCM,data:U4QfFkT6GUnsOThha8WrvJr0KBnjq0Bng9AQqV+UlUDDkh9twdwt7G2Oq8+MiXD31z4KN6GjO1JHyej39GNqOlTRDZEFGBnKmp/Kw+LXJo7TpcHbjCfhLq+Vb+o9uPUYSrd3U9Px6uAOq/Nmx2cY6gwvhExqfn7mo/cxKD+kveE=,iv:AjeWupV58cT5CuKxfoPgF9s7iRP8ApLkfOHdiIPCreE=,tag:AcTmwV2MvihiaEsEAnAgtQ==,type:str]
+    lastmodified: "2023-01-08T23:33:22Z"
+    mac: ENC[AES256_GCM,data:r7dzXrcWQMfaaO8ozhHOijJz0VVb1Ms+AguaL2aNHi7U8Wj3N4Rp5MvWA7UZOXr0rWH9p8NKaZzf8tEIhSnOf4O4jDbIV301hH3wY2X/qDkZCuawb9eU8c7WyM2buPsdj/Lu1NDB61Q/tKJ8FgJRmGPFXI6d4RN1pZP/EWjCpQ4=,iv:fvlgsIfV7v13yW3MKstAUTr/EF8UiZoCBnPbU8DgFcY=,tag:o8zT6IAJFxwCQPCML61BQw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
