--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:vYWwnELL79rgzsoIY3pBqH+13jAb,iv:JiqMG2t8OHVgGht0EpFJTRa3wBEftGAVR1LLh2iSRZA=,tag:sKtp/PtAYp5Wpux9WXKG2A==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:jDB9gqWQOtbZVHwLj14cBAbmK8XSe9mtSbk+I7ZgX43KB9MLqQ==,iv:iWe4xjzzBXBW1lcQrD7H6zCocEcIxbaUNj5b9bobhRE=,tag:YSUQ1VweTZ08mv75KVOrlQ==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:/+JXEtWa79JaH6A=,iv:rf3daPEEp7FrglfkClljufKISHNlre0KPjD9Bgk/0m0=,tag:6NHwA1XJu5Ps3RLEmR8HqA==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:9mc3gaXkAuJuiNTwEp43MgyJqANf,iv:GUep8fZYAP57IPcgTY9wC97OV/PS2F5x7J4jhQE+dYw=,tag:5nIc7BUDjKDmaMiyFOdiRQ==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:fLJZ0WT/o4o0uigVI8kOZvjc6kT1dQJbTZzh9oIYokLA0VaFSQ==,iv:N36rxe5yKLUwwp8GYd5tyn50Hq2p6Tr0igmjTi36k1g=,tag:bvfOxaVApPnsjE16lKchXg==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:Y7eYlb7mt69LrkM=,iv:Tv96D/7FJB3+mfAxK+mErBoXG7kcyQ+mCEJc9CNPdPQ=,tag:kBzAyDC9h3FBAgyeMmbEag==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYQVNnaEw2c1piYTFUbU80
-            aStUdHA3QXBwZWdIOG5kRXUvK0VzdmZFNmc4Cm5XdjZsVG9SQmRuNjJBOHpFajJ6
-            WXdzZ3BTRGFIZ05uVHoxVWpQWVJYNmcKLS0tIG41TjdaRnBDZXJRYks0RU9mNzhu
-            aitkaGkrYng0MmJ2My9IQWh2bXBRc3cKbdiBs918XBVloHQFDqYYShMbuHc6b2pC
-            82EuPxRLXADKWPjBzwTgIiZKqQ+LyaKfjVWgVdmmWPwhHd5nZIvdvA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1VHE2V01DdGN3VnowdkNv
+            aTZxYTY3SmpPTzlDdnhQQm9hUnJnUitWUkJVCjc2NGJVYjlURDYxZGRGTStpQTJN
+            TzdmV1lYTXhNYzNCMWk3ckpLQUxPYWsKLS0tIERMeW01TXZ4Z1lob0M2djdIdkQ0
+            SlJvRUZMZFJzTHUwZ0ZiUzE0SXZ6bFEKdcLZHU+Jt3v8Ov4m3/9R7gtkcwfrEaJo
+            vcgvUWLNzp/uob4Dqk2kk7dGp2lMZN1C4BWa6+fjxXBgNkDmyjtCLA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-08T23:13:11Z"
-    mac: ENC[AES256_GCM,data:GHdLfjjLp85vomlV+m2erLUhxAQ5cqRCBZI3khlY8NSE19x0edNTCFRa2JQkLQQMfZP6Q1Mt3UzZBrBRlK+narc6+fMHeWRYOCv9QBez2K5N6mkpaihgSsbB2frqQnJwuoErpBukyqMXeQ5oxR3wPJPOhqLn43Y3FoXzS4rKQa0=,iv:OOuSJo/jiGG/TnjhX192korRLEQUuE3XjZwQRliV+e0=,tag:hiHtbq+y8ndMhQArBwNQBg==,type:str]
+    lastmodified: "2023-01-08T23:33:21Z"
+    mac: ENC[AES256_GCM,data:WKc4YCpAMOLLi8cpNIR9i6F94H43PlqL6u1hqFCuUbhlvTzujBih6FuFGDyTAkdNqUqckqrjRyNV23xtcDijoGUlR3cvoSUmjS9vV97FN75NcVyOexycFCOaUvINmXu6WOwjDYS4dpreKf5YEmcwybA8hZFEywiqjQOdeWAx0nw=,iv:fhSncF5oIANoDbuFMg+8JrWZzcKiXb0u/5PmwYEGrrY=,tag:YnivXCCmKyF67G9YoNbczQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
