--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,25 +4,25 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:Wyc/lvFeV7CfXVQ=,iv:C5DsV2/RN3NlK3OxSm5yXfVgXVpILyUt1UqJ67b95yg=,tag:EoWLaaWWZZit+Of8nXG1Zg==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:DyS9Wxl/hmdM7kdWRBxKle1T4Ppx,iv:uiePuiSeXb0bj+0W9TQTYJcEVUQfjUnOVZbrFfyIf64=,tag:rTZQ84f59wryhpZ3rYQqOg==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:21S6ZV8vTG8WNe595JYEfWXtcJWLpyWYKubauAsyeVjbhuaUan9YDR7DXsz103N83SJyysousokGzU3KPVPLuKOL3NGTiUE=,iv:SOfKFDaL7UnLfsZHc+gveXOf9oBSfRg4eeZybOKcGI0=,tag:dD1Nx8OFVC5yXUn2AI4mEw==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:jlHUE2/5c3tNiQ+s69Ww85q1nrx+S+wZOoTDvndtHmwtZyU=,iv:nfgrv3bz70lnKjAI4y8tCKsZMezm4Yy1PPjM5gietWU=,tag:gywYWdGdVo9Pu3yOgkZmbw==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:76kCiqgDCkf6GS/YNAF8+O153A==,iv:MHXQGFoggUSEkvpYs25ilF1rRK1nL8D2lfn4+kJladU=,tag:pTg/+agIs9dpdFhNb6XEzQ==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:6EZ7rknMVPZTfaloZAiorr/FcBhx,iv:4LMc1jZhyXKK6WQef7gPyGsiO5MYzBKfW5CezdwmzTo=,tag:TpeX5Pks06wHiitf+fX60Q==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:Qg0p5wAYeUc=,iv:DYFrAF0HZU91NIUuVQgOGK3pB7mz6lzPj5un5uosIdU=,tag:gf9X4oSA3ORBIiJRbZYr8Q==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:1KJo4qYSx0A=,iv:DZ9JI3ueyNT4bk2a3YvSNCf4sS8c60ZVrv7qFR2O7bU=,tag:sa7Uy+7qr+yp5b2+D9aRuw==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:1jFn6TKFxAFo7cI0gBJaWOsfK+cv5dXeEO9unHh7aHr7ZS7II/JPQe3+RXYu7wRwFywhdWjy8A83QMPg4WY2Dg==,iv:75fahZc/5nW5I9myTt+JMYAMjSzSV5tLirflsRnACMo=,tag:ZHF71B7/B4WMgUoi/7isFg==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:AoHvH3NDz8H5vSG+ax/kVTV1Qb50OAKlNIW6QvksDPpMi+m8t+pB3lWcYyim7Ly13zHXiMZ5BYSUzFLPSZDm+w==,iv:3dwPiLX9dNVObB7R9ltr1EYn9tcEpFCxuUOdGotn4Ds=,tag:wvYnoS+A5D/iiqIusp5FEg==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:Yi5iWSQVcdzH,iv:QIZc5sGomB2VUuQuuRLWHoy93XWv4Zh+ZVeLXa5cqBQ=,tag:7VkDGDtcs1v4sQfewJ4PVw==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:zzHl1bnELezky/Z3ziR+,iv:Jw+HJ7XjSC9RlVN7O9XPhLMjNhLMVPXhOCPp0bsLmqQ=,tag:81HD6Ccg/Pn/dXY8cJhT9g==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:JDVfVgc/TO/++6usVzNxiEVtd2Fe3IAjKCeYUkeKWDbW7pskLWHmfrYAu0wGTvv8VQI=,iv:5F3Qa5xl4cMe8wNKoKeoY9eoxlx6hqkj7lKRzMyaCnE=,tag:EAyHGZbuSsy17frc/c8LLQ==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:R9Ob/UuvTDcLQSrCrw8=,iv:AU+r+c892nTXEv5hqUUwFchFHhn+sIynNU3eENLcNx0=,tag:3XpaQrQDahT44XqwiCM85g==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:b/NliqVQMiS/isnJHs//gichNi0=,iv:NAX1M/hzSHuEW4L/pCSO3hXgQOd69XFIBBLc5p3es3s=,tag:40XYAs5Kjm/E8e85lg6QTA==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:mAM3JBB94As=,iv:+sef+i2mThIVhKquRir5x47viEIhpGiYjwBHkXS40Ew=,tag:Gu4jXgsWVlRpaByTkg5hRw==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:lVZcAAzc7iQW8d+X,iv:U+E+6mDpuHFTid0BtOlC4zdka+eTlFFjK9amxmaRz7s=,tag:XjtleaQ+2GYDoB44Np1C4A==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:JbUvrDSPl4Mt,iv:V9juhhFMMmd8O4rZJ8UWywFvU4O/WlEF1wGgiUAqjdc=,tag:JYfGXDqgWziRzpZFHdqVwA==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:k4bZnzLo8fD/,iv:fDbm9ClGBsRnUu6aOZjqAJ6INTbzIEqllY3FEfp6xjs=,tag:5ZZrdLD2cTTiXqrjwLWFsw==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:A5rOdGNFwetTGUM=,iv:FywOgYWpZpPNfYPZIK0Q/YR3BgDeXWKAG4jZFjQaUxI=,tag:KAqyT+P/ty0WkSvZMpYwjw==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:sEiZKQk71+2fYgbWgE8TpjCtuDQG,iv:Mze8vB+6XOkGngkS8xHMBz8JIQqo1aH521foQSB/WUI=,tag:DtGF2BYCKA/DLUmN98zXlA==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:1bZ8oKe6nqm5yg1mcxtTwYRgNI+D8/ilg6iROndIOJ366tCYcQCMC7n710N1Mh8KyuaJ6ESdCVEVUYysJ27+eWUjsgl3+GY=,iv:xNEvLtOpEiR3U/CmzpwVR3n3ik14UWkNN4LnOiDFNoY=,tag:k7gCBYGZZHB2pn8HnnS9FA==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:mz1rbA0i3ytG/9hgiUaaaFGoOmls2y4YoPm9+fwAiySD3BY=,iv:u+nwPVqTuv8eC+MFmGPW15pPj7iF52LslIGxomyZwtc=,tag:/zgmWQ/7JqGbqmlINTvyzw==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:PteFwtAfcJ9PEzAzBeugJK1e5g==,iv:SVkZZiDV+TA+Xs/2Rb0Z+Gn1zkQqYCkA028j3IERHjY=,tag:JjKDHJZ398Uqj/cbkIOpLA==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:0nAJ5SgkGfqMueS/gENzWJZiAizJ,iv:oFIiCjVQGU+FYQ2IfdHF8zZ7XdriW2QUu8COCWn+jbs=,tag:/OPQUsz8+UpuoOTf4d3CfQ==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:zh3L528h7VY=,iv:RLTBEtwmp6+WYQcm/YVGxX8qmtUSacGCpCgEbBJpx6o=,tag:fuC3MB+xLUV2S3isp2Te2w==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:nUT6x9SbfbA=,iv:c2LZYYqL4DMiFAdUsSN6NSwliV9XZMBF3jgG5ebVveQ=,tag:cC2+WDdmOuVbwWZUcLNK2g==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:4fseUndBHmA1LDoD4FgxEHAirGcNkjDyQQVHWSb6D0z3oY2FjKYlhjkF+7pJMIy8vP1OCo3MZvNCXNor8UT4ww==,iv:ud/uRTJkBPjQTuF9taFkVhAGmFlOWfHmpDz5zzkXOe4=,tag:ixGosMaUR4HdsOWJ4nDegQ==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:bQlr4J/DIx2rg15g+uNlwMiZ1iFBM7wxkuL+7J6NkyRZn22gc5Ljipx4xIfVuhaB35BPoGHuvzeCCWUmwLRT1A==,iv:CJD4nn4SkugULdzXCK852fcLX/BhQ58clQych4iFb0E=,tag:BTXPowSpbNTHDQQDm5Mxig==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:mMf0xlR7ZhEX,iv:6H1R+NACTFdN0b5qNTdS78hAgJ0oCiaPH2kkWWGZcr4=,tag:bfUALAcYgZsgFbAAU7QgVQ==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:R+txPGnoKGYu/AabBoBr,iv:hXyVnhUrFRVgpIFQYAe9y/mkWn5JaTQjhYJ+/B8Rk6M=,tag:WeTFEgu0u6zKQ9+GiVDUYg==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:Ba5ezgU24tIW5QW84W32EbfZpUAX0RpCUUGgvYmUscRHh0Bw0i6ONFL0OA+ZByhZPWE=,iv:GrVE9FeuYVcW0jnAUPWsv9iqBynMdBRoFAGbZshlThg=,tag:AjqRAxrtftl8TVWZ8Vjusw==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:OSFCxwndutQ+YC1pmhk=,iv:n4JW6LPrWz3sBAPuG5xeB9FIVKLqVYKQzf3NH4CNMSM=,tag:bj75btjEb8TufN8P4WdIlQ==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:aV0RZhEzvgwAxRGdwulAbH9SsPY=,iv:JJNPQs/PWa+GGyfydzQAvM+dCpebrWRMZtVTjSrzJX0=,tag:IYj/OH4zEzlPgcqFiSTMcA==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:fATI9JEah30=,iv:bgy/FGxDTTBzmt6fsC7/ow/c4KmcDvyPPJ+z7sFNQYU=,tag:kH+egnmjynNYxdCLIQIXUw==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:8Gp0aO/tYZGQQz3A,iv:BTeb9aUtLo073E24caxDcYfvkm8JbgZPQ3E2vibAoeM=,tag:BqHstynCcp9nCrFx32QRpg==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:kmqYOxY46dT4,iv:orZ/DoUJopwRsAD44Lc8XKN2L5k1oeX0EvGAyEUFPCc=,tag:w18ue/P2gutoPObFzUGaPQ==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:MRxdK1NnvyMK,iv:0p+ApRMjqyiWp5vc1AYjZxe3tc1XkGaJvEDtR1qsNaU=,tag:4oTdzJwDHp645P7vd0bQpw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -32,14 +32,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4alM2YnJ0M3VHT3NPQmxM
-            UlZmNm1uTjl4V0RvZy9nbExuejI2aS91cWpjCkg1bUdzejM3Z1o5eDYxdUtXeUdI
-            VmVZK1FUQkFvR2xpOTVVT25BVWdCTjAKLS0tIEVvVjlnN0t4d3BpSXRZaytXakhT
-            bkF4K2tsbk9rb0ViV2RzQ1lGU0F2bE0KRCfLsQq0nrQJi83U9LF8ZmHAbawotBss
-            mtaGTNqtQwnoEoPp4U3uYUhZdM7cuB7um7ohmAVmzIcbtJVfURv/fw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5L3dQUGhEeE04ZFU1amVW
+            azErZHZtQkFBNGlWZjcyTVZITnNDSmJ3clVrCnUvc1dSMFV1b0lzOE9tT1ptK29D
+            STk1blZHUXJWcXA1NmpUMkhxWk8xVW8KLS0tIC9sZ2ExYWhPczU4K0RoY3pWWjJD
+            MVlWV2g1SEhJR1Iyb0tVNkZac1pqcXMKUF3Fv9YaeMTd7pLNjtP1zed8xGKlBqH2
+            MGfSy5jltxmi74utLMSuWAzfCi+ojEQ2CaRRy9fwW3MdIqSrNl/I9g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-08T23:13:11Z"
-    mac: ENC[AES256_GCM,data:hi6TBiaFJwygvLv+q6RBF3bvg77SKhXo9uHhsIKSYUxE8EFra6YzC3/GTtXEhpaaAdCN+oZnXXGbgbUSfBxfdz+Cw032fFcUUgPSTz7DAWIfGCmOgaU2jSC8q22Ks5QYLXaxza7DPYPvJJze0ThJfnrZHfJA9AELyKkiIRmieK8=,iv:jUhruGMjnqjU5AnrWSRGhe5fxCSDvM/Iuer9OR0KAIk=,tag:O8GRs4pwIOXehqLtN7h5aQ==,type:str]
+    lastmodified: "2023-01-08T23:33:21Z"
+    mac: ENC[AES256_GCM,data:4U/ryzalR8kKDvEVuO54z73Do2fvwOlN2JOX0lRED0taEox4cBwNzc1EPpbxIKcRtsJs6+W65SxZPcAqi0wkAwAzVIPIlOP4WN09JiC5WzuE2AcjcYRl/dH6s0wBrDDR2hfKLKgbDWqUbxKhBx6pU8qxVueWCv+EMTXRiAPKFPg=,iv:0O+ZK8DJOlR7Td35S7Jstr5c84L0NdwL5Bxf2cqs+Ro=,tag:H3DCqfJgh9Zk01t3HZ5MUA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
