--- a/kubernetes/flux/vars/cluster-settings.yaml
+++ b/kubernetes/flux/vars/cluster-settings.yaml
@@ -11,6 +11,7 @@ data:
   METALLB_K8S_GATEWAY_ADDR: "192.168.1.98"
   METALLB_INGRESS_ADDR: "192.168.1.99"
   TRAEFIK_SERVICE_ADDR: "192.168.1.95"
+  AUTHENTIK_INGRESS_ADDR: "192.168.1.96"
   NFS_SERVER_ADDR: "192.168.1.2"
   NFS_SERVER_PATH: "/volume1/network-storage"
   PROXMOX_ADDR: "192.168.1.7"
