--- a/tmpl/kubernetes/flux/cluster-settings.yaml
+++ b/tmpl/kubernetes/flux/cluster-settings.yaml
@@ -11,6 +11,7 @@ data:
   METALLB_K8S_GATEWAY_ADDR: "${BOOTSTRAP_METALLB_K8S_GATEWAY_ADDR}"
   METALLB_INGRESS_ADDR: "${BOOTSTRAP_METALLB_INGRESS_ADDR}"
   TRAEFIK_SERVICE_ADDR: "${BOOTSTRAP_TRAEFIK_INGRESS_ADDR}"
+  AUTHENTIK_INGRESS_ADDR: "${BOOTSTRAP_AUTHENTIK_INGRESS_ADDR}"
   NFS_SERVER_ADDR: "${BOOTSTRAP_NFS_SERVER_ADDR}"
   NFS_SERVER_PATH: "${BOOTSTRAP_NFS_SERVER_PATH}"
   PROXMOX_ADDR: "${BOOTSTRAP_PROXMOX_ADDR}"
