--- a/kubernetes/apps/networking/kustomization.yaml
+++ b/kubernetes/apps/networking/kustomization.yaml
@@ -13,4 +13,4 @@ resources:
   #- traefik-error-pages
   #- ./authelia/ks.yaml
   #- ./lldap/ks.yaml
-  - ./authentik/ks.yaml
+  #- ./authentik/ks.yaml
