traefik dash ingress

--- a/kubernetes/apps/networking/traefik/app/dashboard/ingress.yaml
+++ b/kubernetes/apps/networking/traefik/app/dashboard/ingress.yaml
@@ -22,6 +22,8 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: traefik
+                name: api@internal
+              #- name: api@internal
+                kind: TraefikService
                 port:
                   number: 8080
