--- a/kubernetes/apps/default/kubernetes-dashboard/app/helmrelease.yaml
+++ b/kubernetes/apps/default/kubernetes-dashboard/app/helmrelease.yaml
@@ -83,21 +83,7 @@ spec:
         kind: HelmRepository
         name: kubernetes-dashboard
         namespace: flux-system
-  # values:
-  #   ingress:
-  #     enabled: true
-  #     className: traefik
-  #     annotations:
-  #       auth.home.arpa/enabled: "true"
-  #       hajimari.io/enable: "true"
-  #       hajimari.io/icon: bxl:kubernetes
-  #       hajimari.io/group: system management
-  #       hajimari.io/appName: k8s
-  #     hosts:
-  #       - &host k8s.${SECRET_DOMAIN}
-  #     tls:
-  #       - hosts:
-  #           - *host
+  values:
     extraArgs:
       - --enable-skip-login
       - --disable-settings-authorizer
