--- a/kubernetes/apps/networking/traefik/app/dashboard/ingress.yaml
+++ b/kubernetes/apps/networking/traefik/app/dashboard/ingress.yaml
@@ -7,15 +7,19 @@ metadata:
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-production
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
-    traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middlewares-authentik@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authentik@kubernetescrd
+    hajimari.io/appName: "traefik"
+    hajimari.io/enable: "true"
+    hajimari.io/icon: "web"
+
 spec:
   ingressClassName: "traefik"
   tls:
     - hosts:
-        - "traefik.${SECRET_DOMAIN}"
-      secretName: "traefik-${SECRET_DOMAIN/./-}-tls"
+        - &host "traefik.${SECRET_DOMAIN}"
+      secretName: *host
   rules:
-    - host: "traefik.${SECRET_DOMAIN}"
+    - host: *host
       http:
         paths:
           - path: /
