--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -7,5 +7,5 @@ resources:
   - ./hajimari/ks.yaml
   - ./weave-gitops/ks.yaml
   - ./whoami/ks.yaml
-  - ./kubernetes-dashboard/ks.yaml
+  # - ./kubernetes-dashboard/ks.yaml
   - ./filebrowser/ks.yaml
