--- a/kubernetes/apps/monitoring/kubernetes-dashboard/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kubernetes-dashboard/app/helmrelease.yaml
@@ -56,7 +56,7 @@ spec:
                     name: kubernetes-dashboard
                     port:
                       number: 443
-    metricsScraper:
-      enabled: true
-    serviceMonitor:
-      enabled: false
+    # metricsScraper:
+    #   enabled: true
+    # serviceMonitor:
+    #   enabled: false
